--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,8 @@ logging.level.org.hibernate.type.descriptor.sql=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
+
+aws.access.key.id=
+aws.secret.access.key=
+aws.s3.region=
+aws.s3.bucket.name=
