--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ aws.access.key.id=
 aws.secret.access.key=
 aws.s3.region=
 aws.s3.bucket.name=
+
+jwt.secret=SeCrEtKeY4HaShInConcEntforjwtSecReTKeYSPr1ngSecUR1tY
