--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 aws.access.key.id=
 aws.secret.access.key=
-aws.s3.region=
-aws.s3.bucket.name=
+aws.s3.region=ap-northeast-2
+aws.s3.bucket.name=nudge.concent.post
 
 jwt.secret=SeCrEtKeY4HaShInConcEntforjwtSecReTKeYSPr1ngSecUR1tY
