--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ logging.level.org.hibernate.SQL=DEBUG
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
-aws.access.key.id=
+aws.access.key.id=AKIAQHLOTJK3X3KMXSD7
 aws.secret.access.key=
 aws.s3.region=ap-northeast-2
 aws.s3.bucket.name=nudge.concent.post
