Modify name to wooriya

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/concent
+spring.datasource.url=jdbc:mariadb://localhost:3306/wooriya
 spring.datasource.username=root
 spring.datasource.password=1234
 
@@ -11,10 +11,5 @@ logging.level.org.hibernate.type.descriptor.sql=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
-aws.access.key.id=AKIAQHLOTJK3X3KMXSD7
-aws.secret.access.key=
-aws.s3.region=ap-northeast-2
-aws.s3.bucket.name=nudge.concent.post
 
 jwt.secret=SeCrEtKeY4HaShInConcEntforjwtSecReTKeYSPr1ngSecUR1tY
