--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/java,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,macos
 
+**/application.properties
+
 .idea
 
 ### Java ###
