--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
 	annotationProcessor('org.projectlombok:lombok')
 	testAnnotationProcessor('org.projectlombok:lombok')
 	implementation("org.mariadb.jdbc:mariadb-java-client")
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+	implementation 'org.hibernate.validator:hibernate-validator'
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// jwt
