--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	implementation("org.mariadb.jdbc:mariadb-java-client")
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
 	implementation 'org.hibernate.validator:hibernate-validator'
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	//security
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	// jwt
