--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
         id: docker_meta
         uses: crazy-max/ghaction-docker-meta@v1
         with:
-          images: dlckswn334/Woriya_BE
+          images: dlckswn334/Witt_BE
           tag-semver: |
             {{version}}
             {{major}}.{{minor}}
