--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,8 @@
-name: Github Actions
+name: Image build and push
 
 on:
   push:
-    branches:
-      - dev
+    branches: [ "main" ]
     tags:
       - '**'
 
