--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,9 +19,8 @@ jobs:
         uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: dlckswn334/Witt_BE
-          tag-semver: |
-            {{version}}
-            {{major}}.{{minor}}
+          tag-custom: |
+            {{sha}}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
