--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,5 +39,5 @@ jobs:
           file: ./Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ github.sha }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          tags: |
+            dlckswn334/witt_be:${{ github.sha }}
