--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
           SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
         if: success()
   deploy:
-    needs: deploy-dev
+    needs: build
     runs-on: ubuntu-latest
     environment: production
     steps:
