--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,9 +63,7 @@ jobs:
 
       - name: Clone the private repository
         run: |
-          git clone https://x-access-token:${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
-        env:
-          MY_PAT: ${{ secrets.MY_PAT }}
+          git clone https://${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
 
       - name: Modify files
         run: |
@@ -78,5 +76,3 @@ jobs:
           git add .
           git commit -m "Automated changes"
           git push
-        env:
-          MY_PAT: ${{ secrets.MY_PAT }}
