--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
 
       - name: Clone the private repository
         run: |
-          git clone https://${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
+          git clone https://x-access-token:${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
 
       - name: Modify files
         run: |
@@ -75,4 +75,4 @@ jobs:
           cd ${{ secrets.MANIFEST_FLODER_URL }}
           git add .
           git commit -m "Automated changes"
-          git push
+          git push https://${{ secrets.MY_PAT }}@github.com/${{ secrets.MANIFEST_REPO }}.git
