--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,4 +72,4 @@ jobs:
           cd ${{ secrets.MANIFEST_FLODER_URL }}
           git add .
           git commit -m "Automated changes"
-          git push https://x-access-token:${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
+          git push origin main
