--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,7 +62,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
         with:
-          repository: 'dlckswn334/capston-test
+          repository: 'dlckswn334/capston-test'
           ref: 'main' # 혹은 사용하는 브랜치명
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Modify files
