--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,16 +41,16 @@ jobs:
           push: true
           tags: |
             ${{ secrets.DOCKERHUB_URL }}:${{ github.sha }}
-      -
-        name: Notify Slack
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: 테스트
-          SLACK_COLOR: '#000000' # 메시지 색상
-          SLACK_MESSAGE: ${{ steps.get_commit_message.outputs.message }}
-          SLACK_TITLE: 'Commit Message'
-          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: success()
+#      -
+#        name: Notify Slack
+#        uses: rtCamp/action-slack-notify@v2
+#        env:
+#          SLACK_CHANNEL: 테스트
+#          SLACK_COLOR: '#000000' # 메시지 색상
+#          SLACK_MESSAGE: ${{ steps.get_commit_message.outputs.message }}
+#          SLACK_TITLE: 'Commit Message'
+#          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK_URL }}
+#        if: success()
   deploy:
     needs: build
     runs-on: ubuntu-latest
@@ -62,7 +62,7 @@ jobs:
       - name: Checkout the repository
         uses: actions/checkout@v2
         with:
-          repository: 'dlckswn334/capston-test'
+          repository: 'jalju0804/capston-test'
           ref: 'main' # 혹은 사용하는 브랜치명
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Modify files
