--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,4 +79,4 @@ jobs:
         run: |
           git add .
           git commit -m "Automated changes"
-           git -c http.extraheader="AUTHORIZATION: bearer ${{ secrets.MY_PAT }}" push origin main
+          git push https://${{ secrets.MY_PAT }}@github.com/jalju0804/capston-test.git main
