--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,11 @@ on:
       - '**'
 
 permissions:
+  deployments: write
   contents: write
+  statuses: write
+  actions: write
+  checks: read
 
 jobs:
   build:
