--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,13 +6,6 @@ on:
     tags:
       - '**'
 
-permissions:
-  deployments: write
-  contents: write
-  statuses: write
-  actions: write
-  checks: read
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -68,7 +61,7 @@ jobs:
         with:
           repository: 'jalju0804/capston-test'
           ref: 'main' # 혹은 사용하는 브랜치명
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.MY_PAT }}
 
       - name: Configure git
         run: |
