--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,7 +61,7 @@ jobs:
         with:
           repository: 'jalju0804/capston-test'
           ref: 'main' # 혹은 사용하는 브랜치명
-          token: ${{ secrets.MY_PAT }}
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure git
         run: |
@@ -76,4 +76,4 @@ jobs:
         run: |
           git add .
           git commit -m "Automated changes"
-          git push https://${{ secrets.MY_PAT }}@github.com/jalju0804/capston-test.git main
+          git push origin main
