--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,12 +56,15 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
-      - name: Checkout the repository
-        uses: actions/checkout@v2
-        with:
-          repository: 'jalju0804/capston-test'
-          ref: 'main' # 혹은 사용하는 브랜치명
-          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Clone the private repository
+        run: |
+          git clone https://x-access-token:${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
+#      - name: Checkout the repository
+#        uses: actions/checkout@v2
+#        with:
+#          repository: 'jalju0804/capston-test'
+#          ref: 'main' # 혹은 사용하는 브랜치명
+#          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure git
         run: |
@@ -76,4 +79,4 @@ jobs:
         run: |
           git add .
           git commit -m "Automated changes"
-          git push origin main
+          git -c http.extraheader="AUTHORIZATION: bearer ${{ secrets.MY_PAT }}" push origin main
