--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,17 +54,19 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
     environment: production
     steps:
-      - name: Clone the private repository
-        run: |
-          git clone https://x-access-token:${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
-#      - name: Checkout the repository
-#        uses: actions/checkout@v2
-#        with:
-#          repository: 'jalju0804/capston-test'
-#          ref: 'main' # 혹은 사용하는 브랜치명
-#          token: ${{ secrets.GITHUB_TOKEN }}
+#      - name: Clone the private repository
+#        run: |
+#          git clone https://x-access-token:${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
+      - name: Checkout the repository
+        uses: actions/checkout@v2
+        with:
+          repository: 'jalju0804/capston-test'
+          ref: 'main' # 혹은 사용하는 브랜치명
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Configure git
         run: |
