--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,4 +83,5 @@ jobs:
         run: |
           git add .
           git commit -m "Automated changes"
-          git push
+          git remote set-url origin https://${{ secrets.MY_PAT }}@${{ secrets.MANIFEST_REPO }}
+          git push origin main
